internal/shader/testdata/bad/bad_struct.go
package main

type CustomType struct {
    x, y int
}
